CCKEY-140 Fix the header user menu being hidden behind the content

--- a/src/BaseLayout.less
+++ b/src/BaseLayout.less
@@ -51,6 +51,7 @@ html {
   box-shadow: @shadow-2;
   height: 48px;
   background-color: #ffffff;
+  z-index: 999;
 
   .ant-menu-horizontal {
     border: none;
